@@ -6,6 +6,7 @@ AddType text/x-component .htc
   php_flag	log_errors	On
   php_value	error_log	logs/errors
   php_value	upload_max_filesize	5M
+  php_value	post_max_size	6M
 </IfModule>
 
 <IfModule mod_php5.c>
@@ -13,6 +14,7 @@ AddType text/x-component .htc
   php_flag	log_errors	On
   php_value	error_log	logs/errors
   php_value	upload_max_filesize	5M
+  php_value	post_max_size	6M
 </IfModule>
 
 <FilesMatch "(\.inc|\~)$">
